--- a/index.ipynb
+++ b/index.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -859,18 +859,17 @@
        " 'Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 4,\n",
+       " 'Walla Walla Valley',\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Pyeongchang']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
